--- a/server/xtdb.yaml
+++ b/server/xtdb.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: xtdb
+  name: roadside-xtdb
 spec:
   restartPolicy: on-failure
   containers:
     - name: xtdb
-      image: ghcr.io/xtdb/xtdb
+      image: ghcr.io/xtdb/xtdb:2.0.0
       ports:
         - containerPort: 5432
           hostIp: 127.0.0.1
