--- a/website/package.json
+++ b/website/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "global-jsdom": "^27.0.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
