--- a/server/roadside-server.yaml
+++ b/server/roadside-server.yaml
@@ -6,7 +6,7 @@ spec:
   restartPolicy: on-failure
   containers:
     - name: xtdb
-      image: ghcr.io/xtdb/xtdb:2.0.0
+      image: ghcr.io/xtdb/xtdb:2.1.0
       volumeMounts:
         - mountPath: /var/lib/xtdb
           name: xtdb-data
@@ -23,6 +23,5 @@ spec:
           value: xtdb
   volumes:
     - name: xtdb-data
-      hostPath:
-        path: /home/john/xtdb-roadside
-        type: Directory
+      persistentVolumeClaim:
+        claimName: roadside-xtdb-data
