--- a/server/roadside-xtdb.yaml
+++ b/server/roadside-xtdb.yaml
@@ -6,7 +6,7 @@ spec:
   restartPolicy: on-failure
   containers:
     - name: xtdb
-      image: ghcr.io/xtdb/xtdb:2.0.0
+      image: ghcr.io/xtdb/xtdb:2.1.0
       ports:
         - containerPort: 5432
           hostIp: 127.0.0.1
@@ -16,6 +16,5 @@ spec:
           name: xtdb-data
   volumes:
     - name: xtdb-data
-      hostPath:
-        path: /home/john/xtdb-roadside
-        type: Directory
+      persistentVolumeClaim:
+        claimName: roadside-xtdb-data
