--- a/website/package.json
+++ b/website/package.json
@@ -2,6 +2,8 @@
   "name": "roadside-web",
   "version": "1.0.0",
   "dependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.2",
     "global-jsdom": "^27.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
